feat(auth): enforce per-tool capabilities and revoke clients in flight